force-app/main/default/objects/sonar__SObject__c/sonar__SObject__c.object-meta.xml
<CustomObject>
    <label>SObject</label>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>