force-app/main/default/objects/sonar__SObject__c/fields/sonar__Api_Name__c.field-meta.xml
<CustomField>
    <fullName>sonar__Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>