force-app/main/default/objects/sonar__SObject__c/fields/sonar__Fields_Count__c.field-meta.xml
<CustomField>
    <fullName>sonar__Fields_Count__c</fullName>
    <label>Fields Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>