force-app/main/default/objects/sonar__SObject__c/fields/sonar__Last_Analyzed_Date__c.field-meta.xml
<CustomField>
    <fullName>sonar__Last_Analyzed_Date__c</fullName>
    <label>Last Analyzed Date</label>
    <type>DateTime</type>
</CustomField>