force-app/main/default/objects/sonar__SObject__c/fields/sonar__Records_Count__c.field-meta.xml
<CustomField>
    <fullName>sonar__Records_Count__c</fullName>
    <label>Records Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>